# RPi-Telephone-Ringer

./: README.md  README.md_  donos.json  pyproject.toml
src/rpitelephoneringer/: DonoTracker.py  Telephone.py  donos.json  main.py  ringer.py
